--- a/Fibo/fibonacci.html
+++ b/Fibo/fibonacci.html
@@ -8,19 +8,20 @@
 <body>
     <script type="text/javascript"> 
 
+        function mifuncion(){
+            var a = 0;
+            var b = 1;
+            var c = 0;
+
+            while (a <= n) {             
+                document.write(a+'<br>');
+                c = a + b;
+                a = b;
+                b = c;            
+            }  
+        }
         var n=+prompt("Ingresa el limite de la serie: ")
-        var a = 0;
-        var b = 1;
-        var c = 0;
-
-        while (a <= n) {             
-            document.write(a+'<br>');
-            c = a + b;
-            a = b;
-            b = c;            
-        }  
-        
-    </script>
-
-        
+        mifuncion(n);
+    </script>  
+    </body>   
 </html>
