--- a/Fibo/prom.html
+++ b/Fibo/prom.html
@@ -7,19 +7,22 @@
 </head>
 <body>
     <script type="text/javascript"> 
-
-        n=+prompt("Ingresa el total de numeros a capturar")
-        i=0;
-        suma=0;
-        arreglo = new Array(n)
-        while (i<n) {
-            arreglo[i] =+prompt("Ingresa un numero:")             
-            suma=suma+arreglo[i];
-            i++;
+        function miFuncion(){
+            var i=0;
+            var suma=0;       
+            
+            while (i<n) {
+                arreglo[i] =+prompt("Ingresa un numero:")             
+                suma=suma+arreglo[i];
+                i++;
+            }
+            promedio=suma/n;
+            alert("El promedio es: "+promedio)     
         }
+        let n=+prompt("Ingresa el total de numeros a capturar")
+        let arreglo = [];
 
-        promedio=suma/n;
-        alert("El promedio es: "+promedio)
+        miFuncion(n,arreglo);
     </script>
 </body>
 </html>
